move apps url into seperate files
